mejoras proyecto ecommerce

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div id="productos" class="productos">
                 <div class="producto">
-                    <img src="https://picsum.photos/250/220?random=1" alt="Camisa">
+                    <img src="assets/images/Camisa.png" alt="Camisa">
                     <p>Camisa $20<br><br>
                         <button onclick="agregarAlCarrito('Camisa',20)">
                             Añadir al carro
@@ -38,7 +38,7 @@
                     </p>
                 </div>
                 <div class="producto">
-                    <img src="https://picsum.photos/250/220?random=1" alt="Pantalon">
+                    <img src="assets/images/Pantalon.png" alt="Pantalon">
                     <p>Pantalon $30<br><br>
                         <button onclick="agregarAlCarrito('Pantalon',30)">
                             Añadir al carro
@@ -46,7 +46,7 @@
                     </p>
                 </div>
                 <div class="producto">
-                    <img src="https://picsum.photos/250/220?random=1" alt="Abrigo">
+                    <img src="assets/images/Abrigo.png" alt="Abrigo">
                     <p>Abrigo $25<br><br>
                         <button onclick="agregarAlCarrito('Abrigo',25)">
                             Añadir al carro
@@ -54,7 +54,7 @@
                     </p>
                 </div>
                 <div class="producto">
-                    <img src="https://picsum.photos/250/220?random=1" alt="Gorra">
+                    <img src="assets/images/Gorra.png" alt="Gorra">
                     <p>Gorra $10<br><br>
                         <button onclick="agregarAlCarrito('Gorra',10)">
                             Añadir al carro
@@ -62,7 +62,7 @@
                     </p>
                 </div>
                 <div class="producto">
-                    <img src="https://picsum.photos/250/220?random=1" alt="Zapatos">
+                    <img src="assets/images/Zapatos.png" alt="Zapatos">
                     <p>Zapatos $40<br><br>
                         <button onclick="agregarAlCarrito('Zapatos',40)">
                             Añadir al carro
@@ -70,7 +70,7 @@
                     </p>
                 </div>
                 <div class="producto">
-                    <img src="https://picsum.photos/250/220?random=1" alt="Falda">
+                    <img src="assets/images/Falda.png" alt="Falda">
                     <p>Falda $18<br><br>
                         <button onclick="agregarAlCarrito('Falda',18)">
                             Añadir al carro
