--- a/index.html
+++ b/index.html
@@ -4,56 +4,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
     <title>Franks Shop</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <script src="js/main.js" defer></script>
 </head>
 
 <body>
-    <header>
-        <div class="headerTop">
-            <h1>Franks Shop</h1>
-            <div class="carritoComprasContainer">
-                <img class="carritoCompras" src="/assets/images/carrito-de-compras.svg" alt="Carrito de compras">
-                <p id="cantidadProductosEnCarrito" class="cantidadProductosEnCarritoIcono"></p>
-            </div>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <p class="intro">Bienvenido a Franks Shop, tu destino de compras en línea. Explora nuestras ofertas destacadas y
-            descubre productos de calidad a precios increíbles.</p>
+    <div class="container">
 
+        <!-- <p class="intro">Bienvenido a Franks Shop, tu destino de compras en línea. Explora nuestras ofertas destacadas y
+            descubre productos de calidad a precios increíbles.</p> -->
+        <aside>
+            <header>
+                <h1>Franks Shop</h1>
+            </header>
 
-        <section class="featured-section">
-            <h2>¡Descubre nuestras ofertas destacadas!</h2>
-            <p class="promo">Si compras 5 ó mas productos tienes un 10% de descuento</p>
-
+            <nav>
+                <ul class="menu">
+                    <li>
+                        <button id="all" class="boton-menu boton-categoria active"><i class="bi bi-arrow-right"></i>
+                            Todos los productos</button>
+                    </li>
+                    <li>
+                        <button id="women's clothing" class="boton-menu boton-categoria"><i class="bi bi-arrow-right"></i>
+                            Ropa Mujer</button>
+                    </li>
+                    <li>
+                        <button id="men's clothing" class="boton-menu boton-categoria"><i class="bi bi-arrow-right"></i>
+                            Ropa Hombre</button>
+                    </li>
+                    <li>
+                        <button id="electronics" class="boton-menu boton-categoria"><i class="bi bi-arrow-right"></i> Electrónica</button>
+                    </li>
+                    <li>
+                        <button id="jewelery" class="boton-menu boton-categoria"><i class="bi bi-arrow-right"></i>
+                            Joyería</button>
+                    </li>
+                    <li>
+                        <a class="boton-menu boton-carrito" href="./carrodecompra.html">
+                            <i class="bi bi-cart-plus"></i> Carrito <span id="numerito" class="numerito">0</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <footer>
+                <p class="texto-footer">© 2024 Francisco Maduro Cortez</p>
+            </footer>
+        </aside>
+        <main>
+            <h2 class="titulo-principal" id="titulo-principal">Todos los productos</h2>
             <div id="productos" class="productos">
                 <!-- Lista de productos -->
             </div>
-        </section>
-        <div id="carrito" class="Cart">
-            <!-- Información del carrito -->
-            <p>Cantidad de productos en el carrito: <span id="cantidadProductosEnCarrito">0</span></p>
-            <p>Monto total: $<span id="montoTotal">0</span></p>
-            <p id="descuentoMensaje"></p>
 
-            <!-- Lista de productos en el carrito con botones de eliminar -->
-            <div id="productosCarrito" class="productosCarrito">
-                <!-- Aquí se agregarán los productos -->
-            </div>
+        </main>
+    </div>
+
+
+
+    <!-- <div id="carrito" class="Cart"> -->
+    <!-- Información del carrito -->
+    <!-- <p>Cantidad de productos en el carrito: <span id="cantidadProductosEnCarrito">0</span></p>
+            <p>Monto total: $<span id="montoTotal">0</span></p>
+            <p id="descuentoMensaje"></p> -->
+
+    <!-- Lista de productos en el carrito con botones de eliminar -->
+    <!-- <div id="productosCarrito" class="productosCarrito"> -->
+    <!-- Aquí se agregarán los productos -->
+    <!-- </div>
         </div>
-    </main>
-    <footer>
-        <p class="copyright">&copy; 2024 Franks Shop. Todos los derechos reservados.</p>
-    </footer>
+   -->
 </body>
 
 </html>
