--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
     <title>Franks Shop</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles/styles.css">
+
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/main.js" defer></script>
+    <script src="js/carousel.js" defer></script>
+
+
+
+
+
 </head>
 
 <body>
     <div class="container">
-
-        <!-- <p class="intro">Bienvenido a Franks Shop, tu destino de compras en línea. Explora nuestras ofertas destacadas y
-            descubre productos de calidad a precios increíbles.</p> -->
         <aside>
             <header>
                 <h1>Franks Shop</h1>
@@ -23,27 +31,30 @@
             <nav>
                 <ul class="menu">
                     <li>
-                        <button id="all" class="boton-menu boton-categoria active"><i class="bi bi-arrow-right"></i>
-                            Todos los productos</button>
+                        <button id="all" class="menu-button category-button active"><i class="bi bi-arrow-right"></i>
+                            All products</button>
                     </li>
                     <li>
-                        <button id="women's clothing" class="boton-menu boton-categoria"><i class="bi bi-arrow-right"></i>
-                            Ropa Mujer</button>
+                        <button id="women's clothing" class="menu-button category-button"><i
+                                class="bi bi-arrow-right"></i>
+                            Women's clothing</button>
                     </li>
                     <li>
-                        <button id="men's clothing" class="boton-menu boton-categoria"><i class="bi bi-arrow-right"></i>
-                            Ropa Hombre</button>
+                        <button id="men's clothing" class="menu-button category-button"><i
+                                class="bi bi-arrow-right"></i>
+                            Men's clothing</button>
                     </li>
                     <li>
-                        <button id="electronics" class="boton-menu boton-categoria"><i class="bi bi-arrow-right"></i> Electrónica</button>
+                        <button id="electronics" class="menu-button category-button"><i class="bi bi-arrow-right"></i>
+                            Electronics</button>
                     </li>
                     <li>
-                        <button id="jewelery" class="boton-menu boton-categoria"><i class="bi bi-arrow-right"></i>
-                            Joyería</button>
+                        <button id="jewelery" class="menu-button category-button"><i class="bi bi-arrow-right"></i>
+                            Jewelery</button>
                     </li>
                     <li>
-                        <a class="boton-menu boton-carrito" href="./carrodecompra.html">
-                            <i class="bi bi-cart-plus"></i> Carrito <span id="numerito" class="numerito">0</span>
+                        <a class="menu-button button-cart" href="./shoppingcart.html">
+                            <i class="bi bi-cart-plus"></i> Carrito <span id="cartNumber" class="cartNumber">0</span>
                         </a>
                     </li>
                 </ul>
@@ -53,28 +64,23 @@
             </footer>
         </aside>
         <main>
-            <h2 class="titulo-principal" id="titulo-principal">Todos los productos</h2>
-            <div id="productos" class="productos">
-                <!-- Lista de productos -->
+            <h2 class="main-title" id="main-title">All products</h2>
+            <div id="products" class="products">
+                <!-- Products list -->
             </div>
-
+            <div class="wrapper">
+                <div class="carousel">
+                    <div><img src="https://picsum.photos/300/200?random=1"></div>
+                    <div><img src="https://picsum.photos/300/200?random=2"></div>
+                    <div><img src="https://picsum.photos/300/200?random=3"></div>
+                    <div><img src="https://picsum.photos/300/200?random=4"></div>
+                    <div><img src="https://picsum.photos/300/200?random=5"></div>
+                    <div><img src="https://picsum.photos/300/200?random=6"></div>
+                </div>
+            </div>
         </main>
     </div>
 
-
-
-    <!-- <div id="carrito" class="Cart"> -->
-    <!-- Información del carrito -->
-    <!-- <p>Cantidad de productos en el carrito: <span id="cantidadProductosEnCarrito">0</span></p>
-            <p>Monto total: $<span id="montoTotal">0</span></p>
-            <p id="descuentoMensaje"></p> -->
-
-    <!-- Lista de productos en el carrito con botones de eliminar -->
-    <!-- <div id="productosCarrito" class="productosCarrito"> -->
-    <!-- Aquí se agregarán los productos -->
-    <!-- </div>
-        </div>
-   -->
 </body>
 
 </html>
