ultimos ajustes entrega final

--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -26,7 +26,7 @@
                     </li>
 
                     <li>
-                        <a class="menu-button button-cart active" href="./carrodecompra.html">
+                        <a class="menu-button button-cart active" href="./shoppingcart.html">
                             <i class="bi bi-cart-fill"></i> Carrito
                         </a>
                     </li>
@@ -50,14 +50,13 @@
                     <div class="handle-cart-right">
                         <div class="handle-cart-total">
                             <p>Total:</p>
-                            <p id="total">$3000</p>
+                            <p id="total">$100</p>
                         </div>
-                        <button id="gestion-carrito-comprar" class="gestion-carrito-comprar">Comprar ahora</button>
+                        <button id="handle-cart-buy" class="handle-cart-buy">Comprar ahora</button>
                     </div>
                 </div>
                 <p id="purchased-cart" class="purchased-cart disable">Gracias por tu compra</p>
             </div>
-
         </main>
     </div>
 </body>
