--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -7,18 +7,11 @@
     <title>Franks Shop</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles/styles.css">
-
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/main.js" defer></script>
     <script src="js/carousel.js" defer></script>
-
-
-
-
-
 </head>
 
 <body>
@@ -70,12 +63,10 @@
             </div>
             <div class="wrapper">
                 <div class="carousel">
-                    <div><img src="https://picsum.photos/300/200?random=1"></div>
-                    <div><img src="https://picsum.photos/300/200?random=2"></div>
-                    <div><img src="https://picsum.photos/300/200?random=3"></div>
-                    <div><img src="https://picsum.photos/300/200?random=4"></div>
-                    <div><img src="https://picsum.photos/300/200?random=5"></div>
-                    <div><img src="https://picsum.photos/300/200?random=6"></div>
+                    <div><img src="./assets/images/Womens-clothing.png"></div>
+                    <div><img src="./assets/images/men-clothing.png"></div>
+                    <div><img src="./assets/images/tecno.png"></div>
+                    <div><img src="./assets/images/jewel.png"></div>
                 </div>
             </div>
         </main>
